[project]
authors = [{name = "Ethycs", email = "Ethycs@users.noreply.github.com"}]
dependencies = []
name = "eCFR"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["win-64"]

[tool.pixi.pypi-dependencies]
ecfr = { path = ".", editable = true }

[tool.pixi.tasks]
ingest = "python src\\ecfr\\ingest_api.py"
api = "uvicorn ecfr.api:app --reload"
ui = "streamlit run src/ecfr/ui.py"
all = [{task = "ingest"}, {task = "api"}, {task = "ui"}]

[tool.pixi.dependencies]
python = ">=3.13.3,<3.14"
fastapi = ">=0.115.12,<0.116"
uvicorn = ">=0.34.2,<0.35"
aiohttp = ">=3.11.18,<4"
lxml = ">=5.4.0,<6"
pydantic = ">=2.11.4,<3"
pandas = ">=2.2.3,<3"
textstat = ">=0.7.7,<0.8"
streamlit = ">=1.45.0,<2"
requests = ">=2.32.3,<3"
altair = ">=5.5.0,<6"

